--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,15 @@ img {
   max-width: 100%;
 }
 
+.text-ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+          line-clamp: 1; 
+  -webkit-box-orient: vertical;
+}
+
 header img {
   max-width: 250px;
 }
